--- a/frontend/views/partials/admin_loginheader.ejs
+++ b/frontend/views/partials/admin_loginheader.ejs
@@ -5,7 +5,8 @@
         <a class="navbar-brand" href="/">
             <img src="../images/BOSCH.png" alt="BOSCH" id="logo">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -38,6 +39,7 @@
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
             position: relative;
             z-index: 1;
+            padding: 1rem 2rem;
         }
 
         .navbar .navbar-brand img {
@@ -60,7 +62,6 @@
             padding-bottom: 5px;
         }
 
-        /* Animation for blue line under nav items on hover */
         .navbar-nav .nav-link::after {
             content: '';
             position: absolute;
@@ -81,6 +82,21 @@
 
         .navbar-nav .nav-link:hover {
             color: #344958 !important;
+        }
+
+        /* ---------- Responsive Adjustments ---------- */
+        @media (max-width: 576px) {
+            .navbar {
+                padding: 0.5rem 1rem; /* Reduce navbar padding */
+            }
+
+            .navbar .navbar-brand img {
+                max-height: 50px; /* Smaller logo on mobile */
+            }
+
+            .big-header {
+                height: 100px; /* Reduced big-header height */
+            }
         }
     </style>
 </header>
