--- a/frontend/views/users/forgotpassword.ejs
+++ b/frontend/views/users/forgotpassword.ejs
@@ -55,7 +55,7 @@
 
         /* Forgot Password box styles */
         .forgot-password-box {
-            width: 100%;
+            width: 90%;
             max-width: 510px;
             background-color: rgba(255, 255, 255, 0.5); /* Increase transparency */
             border-radius: 30px;
@@ -180,7 +180,7 @@
                     <label for="email" class="form-label">Enter your email address:</label>
                     <input type="email" id="email" name="email" class="form-control mt-1" required placeholder="Your email address" />
                 </div>
-                <button type="submit" class="btn btn-primary btn-block mt-3 btn-submit btn-sm">Send Password Reset Link</button>
+                <button type="submit" class="btn btn-primary btn-block mt-3 btn-submit btn-sm">Send</button>
                 <p class="text-center mt-3">
                     <a href="/user/login" class="text-blue-500 hover:underline">Remembered your password? Login here</a>
                 </p>
