--- a/frontend/views/users/chat.ejs
+++ b/frontend/views/users/chat.ejs
@@ -233,7 +233,7 @@
       <!-- Chat window -->
       <div class="chat-container">
         <div class="p-4 border-b border-gray-200 flex flex-wrap items-center justify-between space-x-2">
-          <button id="menuToggle" class="md:hidden text-2xl focus:outline-none cursor-pointer">
+          <button id="menuToggle" class="hidden md:hidden text-2xl focus:outline-none cursor-pointer">
             <i class="fas fa-bars"></i>
           </button>
           <h4 class="font-semibold text-xl flex-1">Conversation with Chatbot</h4>
