history page update

--- a/frontend/views/users/history.ejs
+++ b/frontend/views/users/history.ejs
@@ -93,7 +93,7 @@
           <input
             type="text"
             id="deleteAllInput"
-            placeholder="Type 'DELETE ALL' + Enter"
+            placeholder="Type 'DELETE ALL'"
             onkeyup="if (event.key==='Enter') confirmClearAll()"
             class="border-2 border-gray-300 p-2 rounded ml-2 w-64"
           >
